--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./SRC/Images/favicon_io" type="image/x-icon">
+    <link rel="shortcut icon" href="./SRC/Images/favicon_io/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./SRC/CSS/style.css">
     <link rel="stylesheet" href="./SRC/CSS/reset.css">
     <link rel="stylesheet" href="./SRC/CSS/responsive.css">
