correção de bugs de responsividade

--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
         <section class="introduction mostrar">
             <img class="banner" src="./SRC/Images/Banner-panetone.png" alt="Um banner sobre o produto">
             <button class="button-intro">Continuar</button>
-            <footer class="footer-copy">
-                <p>Todos os direitos reservados a<span> ®2024 ConectQuiz.</span></p>
-            </footer>
+            <section class="foot-section-intro">
+                <footer class="footer-copy">
+                    <p>Todos os direitos reservados a<span> ®2024 ConectQuiz.</span></p>
+                </footer>
+            </section>
         </section>
 
         <div class="progress-container ocultar">
             <div class="progress-bar"></div>
         </div>
-        
+
         <section class="quiz homem-ou-mulher ocultar">
 
 
@@ -160,30 +162,33 @@
             <img src="./SRC/Images/loading.gif" alt="Carregando..." class="loading-image">
             <p class="loading-text">Processando seu resultado...</p>
         </section>
-        
+
         <section class="result ocultar">
             <img class="logo-panetone" src="./SRC/Images/logo-panetone.png" alt="Logo panetone gourmet lucrativo">
 
-            <p class="result-text">O produto que proporciona uma ótima renda extra para minha mãe e para mim há mais de três anos também pode ajudar você a ter excelentes vendas neste fim de ano. Criamos um PDF que reúne o conhecimento culinário da minha mãe, com suas incríveis receitas, e minha ampla experiência em marketing e vendas. Tudo o que você precisa para vender muito neste fim de ano está nesse material!</p>
+            <p class="result-text">O produto que proporciona uma ótima renda extra para minha mãe e para mim há mais de
+                três anos também pode ajudar você a ter excelentes vendas neste fim de ano. Criamos um PDF que reúne o
+                conhecimento culinário da minha mãe, com suas incríveis receitas, e minha ampla experiência em marketing
+                e vendas. Tudo o que você precisa para vender muito neste fim de ano está nesse material!</p>
 
             <img class="banner" src="./SRC/Images/Banner-panetone.png" alt="Um banner sobre o produto">
 
             <section class="foot-section ">
-            <footer class="foot-result">
-                <button class="btn checkout-button">Prosseguir</button>
+                <footer class="foot-result">
+                    <button class="btn checkout-button">Prosseguir</button>
 
-                <div class="garantia-box">
-                <img class="garantia" src="./SRC/Images/footer-result/Garantia.png" alt="">
-                    <p>Produto com selo de garantia de sete dias.</p>
-                </div>
+                    <div class="garantia-box">
+                        <img class="garantia" src="./SRC/Images/footer-result/Garantia.png" alt="">
+                        <p>Produto com selo de garantia de sete dias.</p>
+                    </div>
 
-               <div class="selos">
-                <img class="barra-segura" src="./SRC/Images/footer-result/barra-segura.png" alt="">
-                <img class="site-seguro" src="./SRC/Images/footer-result/site-seguro.png" alt="">
-                </div>
-            </footer>
+                    <div class="selos">
+                        <img class="barra-segura" src="./SRC/Images/footer-result/barra-segura.png" alt="">
+                        <img class="site-seguro" src="./SRC/Images/footer-result/site-seguro.png" alt="">
+                    </div>
+                </footer>
             </section>
-    </section>
+        </section>
 
     </main>
 
