Correção de texto

--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                 <ul>
                     <li><button class="btn buttonPg4">
                             <span>⌛</span>
-                            <p>Sou iniciante, mas gosto de aprender.</p>
+                            <p>De 1 a 3 horas por semana.</p>
                         </button></li>
                     <li><button class="btn buttonPg4">
                             <span>⏳</span>
-                            <p> Já tenho um bom conhecimento de culinária.</p>
+                            <p>  De 4 a 10 horas por semana.</p>
                         </button></li>
                     <li><button class="btn buttonPg4">
                             <span>💰</span>
-                            <p> Sou quase um(a) profissional, cozinho frequentemente.</p>
+                            <p> Mais de 10 horas por semana.</p>
                         </button></li>
                 </ul>
             </div>
