--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     <link rel="stylesheet" href="./SRC/CSS/responsive.css">
 
     <title>ConectQuiz</title>
+
+    <!-- Meta Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '871159071734749');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=871159071734749&ev=PageView&noscript=1" /></noscript>
 </head>
 
 <body>
@@ -104,7 +123,7 @@
                         </button></li>
                     <li><button class="btn buttonPg4">
                             <span>⏳</span>
-                            <p>  De 4 a 10 horas por semana.</p>
+                            <p> De 4 a 10 horas por semana.</p>
                         </button></li>
                     <li><button class="btn buttonPg4">
                             <span>💰</span>
